clase 18 de 27 integrar toggle menu derecha de clase7.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <!-- CSS -->
   <link rel="stylesheet" href="./styles.css">
-  
+
   <title>Siete Motos :: Tienda de repuestos para moto</title>
 </head>
 <body>
@@ -53,7 +53,7 @@
         </li>
       </ul>
     </div>
-    <div class="desktop-menu">
+    <div class="desktop-menu inactive">
       <ul>
         <li>
           <a href="/" class="title">My orders</a>
@@ -69,5 +69,8 @@
       </ul>
     </div>
   </nav>
+
+  <!-- JAVASCRIPT -->
+  <script src="./main.js"></script>
 </body>
 </html>
